# Notepen

./: .gitignore  README.md  pyproject.toml
notepen/: launch.py  mitm.py
notepen/ui/: __init__.py  mitm.py
