[tool.poetry]
name = "notepen"
version = "0.1.0"
description = "Notebook based penetration testing toolset"
authors = ["Anciety <anciety@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
ipywidgets = "^8.0"
mitmproxy = "^9.0"
ipyvuetify = "^1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
